objects/CZConvergeConfiguration__mdt.object
<CustomObject>
    <description>It contains all the config for Converge(Elavon) Funding</description>
    <fields>
        <fullName>EndPoint__c</fullName>
        <description>URL endpoint</description>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked http request body will be logged in &apos;Debug Logs&apos;.</description>
        <inlineHelpText>If checked http request body will be logged in &apos;Debug Logs&apos;.</inlineHelpText>
        <label>Log Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked response from http will be logged in &apos;Debug Logs&apos;.</description>
        <inlineHelpText>If checked response from http will be logged in &apos;Debug Logs&apos;.</inlineHelpText>
        <label>Log Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method</description>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestTimeout__c</fullName>
        <description>Request timeout defaulted to 120 seconds</description>
        <label>RequestTimeout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <description>Transaction Type</description>
        <label>TransactionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Converge Configuration</label>
    <pluralLabel>Converge Configurations</pluralLabel>
</CustomObject>